@@ -1,24 +1,21 @@
-/**
- * Tura - application generation platform
- *
- * Copyright (c) 2012 - 2018, Arseniy Isakov
- *
- * This project includes software developed by Arseniy Isakov
- * http://sourceforge.net/p/tura/wiki/Home/
- *
- * Licensed under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License. You may obtain a copy of the License at:
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied. See the License for the
- * specific language governing permissions and limitations
- * under the License.
- */
+/*
+ * Tura - Application generation solution
+ *
+ * Copyright 2008-2020 2182342 Ontario Inc ( arseniy.isakov@turasolutions.com )
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package sales.analyzer.commons.service.impl;
 
 import java.util.UUID;
@@ -41,6 +38,7 @@ import org.tura.salesanalyzer.serialized.keycloak.RoleReference;
 import org.tura.salesanalyzer.serialized.keycloak.User;
 
 public class UUIPrimaryKeyStrategy implements PrImaryKeyStrategy{
+	private static final long serialVersionUID = -8595832443319851130L;
 	public static long id =-100L;
 
 	@Override
@@ -66,44 +64,44 @@ public class UUIPrimaryKeyStrategy implements PrImaryKeyStrategy{
 		}
 		
 		if (o instanceof Country) {
-			((Country)o).setObjId( new Long(id).intValue());
+			((Country)o).setObjId(  Long.valueOf(id).intValue());
 			id= id+1;
 			return;
 		}
 		if (o instanceof State) {
-			((State)o).setObjId( new Long(id).intValue());
+			((State)o).setObjId( Long.valueOf(id).intValue());
 			id= id+1;
 			return;
 		}
 		if (o instanceof City) {
-			((City)o).setObjId( new Long(id).intValue());
+			((City)o).setObjId( Long.valueOf(id).intValue());
 			id= id+1;
 			return;
 		}
 
 		if (o instanceof HolderObject) {
-			((HolderObject)o).setObjId(( new Long(id)));
+			((HolderObject)o).setObjId(( Long.valueOf(id)));
 			id= id+1;
 			return;
 		}
 		
 		
 		if (o instanceof Preferences) {
-			((Preferences)o).setObjId( new Long(id));
+			((Preferences)o).setObjId( Long.valueOf(id));
 			id= id+1;
 			return;
 		}
 
 		
 		if (o instanceof CaseProcess) {
-			((CaseProcess)o).setId( new Long(id));
+			((CaseProcess)o).setId( Long.valueOf(id));
 			id= id+1;
 			((CaseProcess)o).setCaseId(UUID.randomUUID().toString());
 			return;
 		}
 		
 		if (o instanceof EtlProcess) {
-			((EtlProcess)o).setId( new Long(id));
+			((EtlProcess)o).setId( Long.valueOf(id));
 			id= id+1;
 			return;
 		}
