@@ -1,66 +1,21 @@
-/**
- * Tura - application generation platform
+/*
+ * Tura - Application generation solution
  *
- * Copyright (c) 2012 - 2019, Arseniy Isakov
+ * Copyright 2008-2020 2182342 Ontario Inc ( arseniy.isakov@turasolutions.com )
  *
- * This project includes software developed by Arseniy Isakov
- * http://sourceforge.net/p/tura/wiki/Home/
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License. You may obtain a copy of the License at:
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied. See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
-/**
- * Tura - application generation platform
- *
- * Copyright (c) 2012 - 2018, Arseniy Isakov
- *
- * This project includes software developed by Arseniy Isakov
- * http://sourceforge.net/p/tura/wiki/Home/
- *
- * Licensed under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License. You may obtain a copy of the License at:
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied. See the License for the
- * specific language governing permissions and limitations
- * under the License.
- */
-/**
- * Tura - application generation platform
- *
- * Copyright (c) 2012 - 2018, Arseniy Isakov
- *
- * This project includes software developed by Arseniy Isakov
- * http://sourceforge.net/p/tura/wiki/Home/
- *
- * Licensed under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License. You may obtain a copy of the License at:
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied. See the License for the
- * specific language governing permissions and limitations
- * under the License.
- */
+
 package org.tura.platform.repository.core;
 
 import java.util.ArrayList;
@@ -84,8 +39,15 @@ import org.tura.platform.repository.triggers.PreQueryTrigger;
 
 public class BasicRepository extends RepositoryHelper implements Repository {
 
+	private static final long serialVersionUID = 6266970411524948146L;
+	
 	private Registry registry;
 
+	
+	public BasicRepository() {
+		
+	}
+	
 	public BasicRepository(Registry registry) {
 		super(registry);
 		this.registry = registry;
@@ -103,7 +65,7 @@ public class BasicRepository extends RepositoryHelper implements Repository {
 	public Object create(String repositoryClass) throws RepositoryException {
 		try {
 			findPersistanceClass(repositoryClass);
-			Object repositoryObject = Class.forName(repositoryClass).newInstance();
+			Object repositoryObject = Class.forName(repositoryClass).getDeclaredConstructor().newInstance();
 
 			PrImaryKeyStrategy prImaryKeyStrategy = findPrImaryKeyStrategy();
 			if (prImaryKeyStrategy != null) {
@@ -279,11 +241,14 @@ public class BasicRepository extends RepositoryHelper implements Repository {
 				}
 
 			}
+			registry.getStorageCommandProcessor().process();
+			
 			cl.beforeCommit();
 			getTransactionAdapter().commit();
 			cl.afterCommit();
 
 		} catch (Exception e) {
+			e.printStackTrace();
 			try {
 				cl.beforeRollback();
 				getTransactionAdapter().rollback();
