@@ -1,45 +1,21 @@
-/**
- * Tura - application generation platform
+/*
+ * Tura - Application generation solution
  *
- * Copyright (c) 2012 - 2019, Arseniy Isakov
+ * Copyright 2008-2020 2182342 Ontario Inc ( arseniy.isakov@turasolutions.com )
  *
- * This project includes software developed by Arseniy Isakov
- * http://sourceforge.net/p/tura/wiki/Home/
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License. You may obtain a copy of the License at:
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied. See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
-/**
-* Tura - application generation platform
-*
-* Copyright (c) 2012 - 2018, Arseniy Isakov
-*
-* This project includes software developed by Arseniy Isakov
-* http://sourceforge.net/p/tura/wiki/Home/
-*
-* Licensed under the Apache License, Version 2.0 (the
-* "License"); you may not use this file except in compliance
-* with the License. You may obtain a copy of the License at:
-*
-* http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing,
-* software distributed under the License is distributed on
-* an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-* KIND, either express or implied. See the License for the
-* specific language governing permissions and limitations
-* under the License.
-*/
+
 package org.tura.platform.repository.core;
 
 import java.lang.reflect.Method;
@@ -59,6 +35,7 @@ import com.octo.java.sql.exp.Operator;
 
 public class RepositoryObjectLoader extends RepositoryHelper {
 
+	private static final long serialVersionUID = -5153791669669658662L;
 	static int MAX_ROW_NUMBER = 50;
 	public static String PARENT_PERSISTANCE_OBJECT = "parentPersistanceObject";
 	public static String PARENT_REPOSITORY_OBJECT = "parentRepositoryObject";
@@ -96,7 +73,7 @@ public class RepositoryObjectLoader extends RepositoryHelper {
 	}
 
 	private Object instantiateObject(Class<?> repositoryClass) throws Exception {
-		return repositoryClass.newInstance();
+		return repositoryClass.getDeclaredConstructor().newInstance();
 	}
 
 	private void internalLoader(Object repositoryObject, boolean fromInternalClass, ObjectGraph graph,
