@@ -1,24 +1,21 @@
-/**
- * Tura - application generation platform
+/*
+ * Tura - Application generation solution
  *
- * Copyright (c) 2012 - 2019, Arseniy Isakov
+ * Copyright 2008-2020 2182342 Ontario Inc ( arseniy.isakov@turasolutions.com )
  *
- * This project includes software developed by Arseniy Isakov
- * http://sourceforge.net/p/tura/wiki/Home/
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License. You may obtain a copy of the License at:
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied. See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package org.tura.platform.repository.client.rest;
 
 import java.net.URL;
@@ -46,6 +43,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 
 public class RestClientRepository implements Repository {
 
+	private static final long serialVersionUID = -1003783682499426763L;
 	private URL base;
 	private Client client;
 
@@ -114,7 +112,7 @@ public class RestClientRepository implements Repository {
 		    ArrayList<Object> list = new ArrayList<>();
 		    
 			for (int i  = 0; ;i++){
-				String key = new Integer(i).toString();
+				String key =  Integer.valueOf(i).toString();
 				if (map.get(key) == null){
 					break;
 				}
@@ -159,8 +157,8 @@ public class RestClientRepository implements Repository {
 
 			int index = 0;
 			for (Object o : changes) {
-				formData.add(new Integer(index).toString()+"_type", o.getClass().getName());
-				formData.add(new Integer(index).toString(), mapper.writeValueAsString(o));
+				formData.add(Integer.valueOf(index).toString()+"_type", o.getClass().getName());
+				formData.add(Integer.valueOf(index).toString(), mapper.writeValueAsString(o));
 				index++;
 			}
 
