@@ -1,24 +1,21 @@
-/**
- * Tura - application generation platform
+/*
+ * Tura - Application generation solution
  *
- * Copyright (c) 2012 - 2019, Arseniy Isakov
+ * Copyright 2008-2020 2182342 Ontario Inc ( arseniy.isakov@turasolutions.com )
  *
- * This project includes software developed by Arseniy Isakov
- * http://sourceforge.net/p/tura/wiki/Home/
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License. You may obtain a copy of the License at:
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied. See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package org.tura.platform.repository.spa;
 
 import java.util.ArrayList;
@@ -27,31 +24,59 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.atomic.AtomicReference;
 
 import org.tura.platform.datacontrol.commons.OrderCriteria;
 import org.tura.platform.datacontrol.commons.SearchCriteria;
-import org.tura.platform.repository.core.BeforeBeginTransaction;
-import org.tura.platform.repository.core.BeforeCommitTransaction;
-import org.tura.platform.repository.core.BeforeRollbackTransaction;
 import org.tura.platform.repository.core.Mapper;
 import org.tura.platform.repository.core.Registry;
 import org.tura.platform.repository.core.Repository;
-import org.tura.platform.repository.core.RepositoryEvent;
-import org.tura.platform.repository.core.RepositoryEventsListener;
 import org.tura.platform.repository.core.RepositoryException;
 import org.tura.platform.repository.core.SearchProvider;
 import org.tura.platform.repository.core.SearchResult;
+import org.tura.platform.repository.core.StorageCommandProcessor;
 
-public class SpaRepository implements Repository, RepositoryEventsListener {
+public class SpaRepository implements Repository, StorageCommandProcessor {
 
-	private Map<String, Map<Object, SpaControl>> cache = new HashMap<>();
-	private int sequence;
+	public transient static final ThreadLocal<AtomicReference<SpaRepositoryData>> SPA_REPOSITORY_DATA_THREAD_LOCAL = ThreadLocal
+			.withInitial(AtomicReference::new);
+
+	private static final long serialVersionUID = 1615677329324930020L;
 	private String registryName;
 	private SpaObjectRegistry spaRegistry;
 	private Registry registry;
 
+	private Map<String, Map<Object, SpaControl>> getCache() {
+		SpaRepositoryData data = getTheadData();
+		return data.getCache();
 
-	public void setRegistry(  SpaObjectRegistry spaRegistry, String registryName ,Registry registry) {
+	}
+
+	private List<SpaControl> getNomergeRules() {
+		SpaRepositoryData data = getTheadData();
+		return data.getNomergeRules();
+	}
+
+	private int getSequence() {
+		SpaRepositoryData data = getTheadData();
+		int i = data.getSequence();
+		data.setSequence(i + 1);
+		return i;
+	}
+
+	private void setSequence(int i) {
+		SpaRepositoryData data = getTheadData();
+		data.setSequence(i);
+	}
+
+	private SpaRepositoryData getTheadData() {
+		if (SPA_REPOSITORY_DATA_THREAD_LOCAL.get().get() == null) {
+			SPA_REPOSITORY_DATA_THREAD_LOCAL.get().set(new SpaRepositoryData());
+		}
+		return SPA_REPOSITORY_DATA_THREAD_LOCAL.get().get();
+	}
+
+	public void setRegistry(SpaObjectRegistry spaRegistry, String registryName, Registry registry) {
 		this.registryName = registryName;
 		this.spaRegistry = spaRegistry;
 		this.registry = registry;
@@ -61,15 +86,14 @@ public class SpaRepository implements Repository, RepositoryEventsListener {
 		return registryName;
 	}
 
-
-	public Map<Object, SpaControl> getCache(String objectName){
-		return cache.get(objectName);
+	public Map<Object, SpaControl> getCache(String objectName) {
+		return getCache().get(objectName);
 	}
-	
+
 	@Override
 	public Object create(String objectClass) throws RepositoryException {
 		try {
-			Object obj = Class.forName(objectClass).newInstance();
+			Object obj = Class.forName(objectClass).getDeclaredConstructor().newInstance();
 			return obj;
 		} catch (Exception e) {
 			throw new RepositoryException(e);
@@ -80,8 +104,8 @@ public class SpaRepository implements Repository, RepositoryEventsListener {
 	public SearchResult find(List<SearchCriteria> searchCriteria, List<OrderCriteria> orderCriteria, Integer startIndex,
 			Integer endIndex, String objectClass) throws RepositoryException {
 		try {
-			SearchProvider provider = findSearchProvider(objectClass);
-			return provider.find(searchCriteria, orderCriteria, startIndex, endIndex,objectClass);
+			SearchProvider provider = findSearchProvider(objectClass, this.registryName);
+			return provider.find(searchCriteria, orderCriteria, startIndex, endIndex, objectClass);
 		} catch (Exception e) {
 			throw new RepositoryException(e);
 		}
@@ -90,15 +114,13 @@ public class SpaRepository implements Repository, RepositoryEventsListener {
 	@Override
 	public Object find(Object pk, String objectClass) throws RepositoryException {
 		try {
-			SearchProvider provider = findSearchProvider(objectClass);
-			return provider.find( pk, objectClass);
+			SearchProvider provider = findSearchProvider(objectClass, this.registryName);
+			return provider.find(pk, objectClass);
 		} catch (Exception e) {
 			throw new RepositoryException(e);
 		}
 	}
-	
-	
-	
+
 	@Override
 	public void insert(Object obj, String objectClass) throws RepositoryException {
 		throw new UnsupportedOperationException();
@@ -117,7 +139,6 @@ public class SpaRepository implements Repository, RepositoryEventsListener {
 				SpaRepositoryCommand cmd = (SpaRepositoryCommand) change;
 				List<String> listOfKnownObjects = cmd.getListOfKnownObjects();
 				injectSearchProviders(cmd, listOfKnownObjects);
-				cmd.setRegistry(registryName);
 				List<SpaControl> objects = cmd.prepare();
 				populateCache(objects);
 			}
@@ -128,18 +149,9 @@ public class SpaRepository implements Repository, RepositoryEventsListener {
 	}
 
 	@Override
-	public void notify(RepositoryEvent event) throws Exception {
-		if (event instanceof BeforeBeginTransaction) {
-			cleanupCache();
-		}
-		if (event instanceof BeforeRollbackTransaction) {
-			cleanupCache();
-			rallback();
-		}
-		if (event instanceof BeforeCommitTransaction) {
-			persistCachedObjects();
-			cleanupCache();
-		}
+	public void process() throws Exception {
+		persistCachedObjects();
+		cleanupCache();
 	}
 
 	private void persistCachedObjects() throws Exception {
@@ -152,7 +164,7 @@ public class SpaRepository implements Repository, RepositoryEventsListener {
 
 	private CRUDProvider findCRUDProvider(SpaControl obj) throws Exception {
 		Class<?> clazz = Class.forName(obj.getType());
-		CRUDProvider provider = spaRegistry.getRegistry(registryName).findCRUDProvider(clazz);
+		CRUDProvider provider = spaRegistry.getRegistry(obj.getRegistryName()).findCRUDProvider(clazz);
 		if (provider == null) {
 			throw new RepositoryException("Cannot find CRUDProvider for class " + clazz);
 		}
@@ -160,16 +172,21 @@ public class SpaRepository implements Repository, RepositoryEventsListener {
 	}
 
 	private void populateCache(List<SpaControl> list) throws RepositoryException {
-		if (list == null){
+		if (list == null) {
 			return;
 		}
 		for (SpaControl control : list) {
-			control.setSequence(sequence++);
+			control.setSequence(getSequence());
 
-			Map<Object, SpaControl> listOfObjectsPerType = (Map<Object, SpaControl>) cache.get(control.getType());
+			if (control.getLevel().getRule() == null) {
+				getNomergeRules().add(control);
+				return;
+			}
+
+			Map<Object, SpaControl> listOfObjectsPerType = (Map<Object, SpaControl>) getCache().get(control.getType());
 			if (listOfObjectsPerType == null) {
 				listOfObjectsPerType = new HashMap<>();
-				cache.put(control.getType(), listOfObjectsPerType);
+				getCache().put(control.getType(), listOfObjectsPerType);
 			}
 			SpaControl preparedObject = (SpaControl) listOfObjectsPerType.get(control.getKey());
 			if (preparedObject == null) {
@@ -182,40 +199,37 @@ public class SpaRepository implements Repository, RepositoryEventsListener {
 
 	private void injectSearchProviders(SpaRepositoryCommand cmd, List<String> listOfKnownObjects) throws Exception {
 		for (String className : listOfKnownObjects) {
-			SearchProvider provider = findSearchProvider(className);
+			SearchProvider provider = findSearchProvider(className, cmd.getRegistryName());
 			cmd.addSearchProvider(className, provider);
 		}
 	}
 
 	private void cleanupCache() {
-		cache.clear();
-		sequence = 0;
+		getCache().clear();
+		getNomergeRules().clear();
+		setSequence(0);
 	}
 
-	private void rallback() {
-		cleanupCache();
-	}
-
-	private SearchProvider findSearchProvider(String className) throws Exception {
+	private SearchProvider findSearchProvider(String className, String registryName) throws Exception {
 		SearchProvider provider = spaRegistry.getRegistry(registryName).findSearchProvider(className);
 		if (provider == null) {
 			String repositoryClass = registry.findRepositoryClass(className);
-			Repository repository =  registry.findProvider(repositoryClass);
-			if (repository != null){
-				return new SearchProviderRepositoryWrapper(repository,spaRegistry);
+			Repository repository = registry.findProvider(repositoryClass);
+			if (repository != null) {
+				return new SearchProviderRepositoryWrapper(repository, spaRegistry);
 			}
 			throw new RepositoryException("Cannot find  SearchProvider for class " + className);
 		}
-		if (provider instanceof AbstaractSearchService){
-			((AbstaractSearchService)provider).setMapper(findMapper(className));
-			((AbstaractSearchService)provider).setCache(cache.get(className));
+		if (provider instanceof AbstaractSearchService) {
+			((AbstaractSearchService) provider).setMapper(findMapper(className));
+			((AbstaractSearchService) provider).setCache(getCache().get(className));
 		}
 		return provider;
 
 	}
 
-	protected Mapper findMapper(String persistanceClassName) throws RepositoryException{
-		
+	protected Mapper findMapper(String persistanceClassName) throws RepositoryException {
+
 		String repositoryClassName = registry.findRepositoryClass(persistanceClassName);
 		Mapper mapper = registry.findMapper(persistanceClassName, repositoryClassName);
 		if (mapper == null) {
@@ -223,15 +237,17 @@ public class SpaRepository implements Repository, RepositoryEventsListener {
 					"Mapper not found from " + persistanceClassName + " to " + repositoryClassName);
 		}
 		return mapper;
-	}	
-	
+	}
+
 	private List<SpaControl> getListOfPreparedObjects() {
 		ArrayList<SpaControl> list = new ArrayList<>();
 
-		for (String h : cache.keySet()) {
-			Map<Object, SpaControl> typedList = cache.get(h);
+		for (String h : getCache().keySet()) {
+			Map<Object, SpaControl> typedList = getCache().get(h);
 			list.addAll(typedList.values());
 		}
+		list.addAll(getNomergeRules());
+
 		Collections.sort(list, new Comparator<SpaControl>() {
 
 			@Override
@@ -247,13 +263,13 @@ public class SpaRepository implements Repository, RepositoryEventsListener {
 		preparedObject.getLevel().getRule().merge(listOfObjectsPerType, preparedObject, control);
 	}
 
-    @Override
-    public boolean equals(Object o) {
-    	if (o instanceof  SpaRepository){
-    		SpaRepository r = (SpaRepository) o;
-    		return r.registryName.equals(this.registryName);
-    	}else{
-    		return false;
-    	}
+	@Override
+	public boolean equals(Object o) {
+		if (o instanceof SpaRepository) {
+			SpaRepository r = (SpaRepository) o;
+			return r.registryName.equals(this.registryName);
+		} else {
+			return false;
+		}
 	}
 }
