@@ -1,24 +1,21 @@
-/**
- * Tura - application generation platform
+/*
+ * Tura - Application generation solution
  *
- * Copyright (c) 2012 - 2019, Arseniy Isakov
+ * Copyright 2008-2020 2182342 Ontario Inc ( arseniy.isakov@turasolutions.com )
  *
- * This project includes software developed by Arseniy Isakov
- * http://sourceforge.net/p/tura/wiki/Home/
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License. You may obtain a copy of the License at:
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied. See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package org.tura.platform.test;
 
 import static org.junit.Assert.assertEquals;
@@ -131,7 +128,7 @@ public abstract class MasterDetailDataControlPool {
 	        
 			EmployeeType rowe = dce.getCurrentObject();
 
-			assertEquals( new Long(123L),rowe.getObjId());
+			assertEquals(  Long.valueOf(123L),rowe.getObjId());
 			
 			
 		} catch (Exception e) {
@@ -187,7 +184,7 @@ public abstract class MasterDetailDataControlPool {
 			
 			rowe = dce.getCurrentObject();
 
-			assertEquals( new Long(123L),rowe.getObjId());
+			assertEquals(  Long.valueOf(123L),rowe.getObjId());
 			
 		} catch (Exception e) {
 			e.printStackTrace();
@@ -243,7 +240,7 @@ public abstract class MasterDetailDataControlPool {
 			rowd =  dcd.getCurrentObject();
 			rowe = dce.getCurrentObject();
 
-			assertEquals( new Long(123L),rowd.getObjId());
+			assertEquals(  Long.valueOf(123L),rowd.getObjId());
 			assertNull(rowe);
 			
 			
@@ -288,7 +285,7 @@ public abstract class MasterDetailDataControlPool {
 			rowd =  dcd.getCurrentObject();
 			rowe = dce.getCurrentObject();
 
-			assertEquals( new Long(123L),rowd.getObjId());
+			assertEquals(  Long.valueOf(123L),rowd.getObjId());
 			assertEquals( "qqq",rowd.getDepartmentName());
 			assertNull(rowe);
 			
